feat(api): Conclusão de desenvolvimento relacionada a tabela de comentários
